Update RestaurantDetails and Fix text align

--- a/online-food-frontend/online-food/src/index.css
+++ b/online-food-frontend/online-food/src/index.css
@@ -12,10 +12,6 @@ code {
     monospace;
 }
 
-.box{
-  background-color: #0032ee;
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
